# namesbench

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  run_benchmark.py
src/namesbench/: __init__.py  agents.py  benchmark_runner.py  game_state.py  image_board.py  player_prompt.py  spymaster_prompt.py
src/namesbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_benchmark_no_llm.py
